# test_sqlx

./: .gitignore  Cargo.toml  env.example
migrations/: 20201021165108_todos.sql
src/: main.rs
