[package]
name = "test_sqlx"
version = "0.1.0"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = "0.2"
dotenv = "0.15"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
anyhow = "1.0"
